# mxc

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Directory.Build.props  PHASE2_OPTION_B1_NOTES.md  PHASE2_OPTION_B2_NOTES.md  README.md  Readme.md  SESSION_NOTES_phase6_2026-05-14.md  SUPPORT.md  Sandbox-Handoff.md  TRADEMARKS.md  build-mac.sh  build.bat  build.sh  build_all.bat  build_debug.bat  build_solution.bat  build_tests.bat  es-metadata.yml  microvm-perf-results.json  vcpkg.json  vm-test-script.ps1  windows-sandbox-perf-results.json  wxc.sln
src/: Cargo.toml  expert-code-review-results.md  rust-toolchain.toml
src/agent_session_bindings/: Cargo.toml  build.rs
src/agent_session_bindings/src/: bindings.rs  lib.rs
src/backends/learning_mode_linux/: Cargo.toml
src/backends/learning_mode_macos/: Cargo.toml
src/backends/learning_mode_windows/: Cargo.toml
src/bwrap_common/: Cargo.toml
src/bwrap_common/src/: bwrap_command.rs  bwrap_runner.rs  lib.rs
src/core/denial_capture/: Cargo.toml
src/core/denial_channel/: Cargo.toml
src/core/learning_mode/: Cargo.toml
src/core/learning_mode_api/: Cargo.toml
src/core/learning_mode_broker_protocol/: Cargo.toml
src/core/learning_mode_core/: Cargo.toml
src/core/lxc/: Cargo.toml  build.rs
src/core/lxc/src/: main.rs
src/core/mxc/: Cargo.toml  README.md
src/core/mxc-sdk/: Cargo.toml  README.md
src/core/mxc_build_common/: Cargo.toml
src/core/mxc_darwin/: Cargo.toml  build.rs
src/core/mxc_engine/: Cargo.toml
src/core/mxc_pty/: Cargo.toml
src/core/plm/: Cargo.toml  build.rs  readme.md
src/core/wxc/: Cargo.toml  build.rs
src/core/wxc_common/: Cargo.toml
src/ffi/mxc_ffi/: Cargo.toml  build.rs
src/fuzz/: Cargo.toml  OneFuzzConfig.json  README.md
src/fuzz/fuzz_targets/: base64_decode.rs  config_parser.rs  validator.rs
src/host/mxc_denial_shim/: Cargo.toml
src/host/mxc_learning_mode_broker/: Cargo.toml
src/host/mxc_learning_mode_shim/: Cargo.toml
src/host/plm/: Cargo.toml  build.rs  readme.md
src/host/wxc_host_prep/: Cargo.toml  build.rs
src/host/wxc_winhttp_proxy_shim/: Cargo.toml
src/isolation_session_bindings/: Cargo.toml  build.rs
src/isolation_session_bindings/src/: bindings.rs  lib.rs
src/learning_mode/: event_dacl_parser.ps1  extract_caps.ps1  readme.md  start_plm_logging.ps1  stop_plm_logging.ps1
src/linux_test_proxy/: Cargo.toml
src/linux_test_proxy/src/: main.rs  proxy.rs
src/lxc/: Cargo.toml  build.rs
src/lxc/src/: main.rs
src/lxc_common/: Cargo.toml
src/lxc_common/src/: filesystem_mounts.rs  lib.rs  lxc_bindings.rs  lxc_runner.rs  network_iptables.rs  signal_cleanup.rs
src/macos_sandbox_common/: Cargo.toml
src/macos_sandbox_common/src/: lib.rs  macos_sandbox_runner.rs  profile_builder.rs
src/mxc_build_common/: Cargo.toml
src/mxc_build_common/src/: lib.rs
src/mxc_darwin/: Cargo.toml  build.rs
src/mxc_darwin/src/: main.rs
src/mxc_diagnostic_console/: Cargo.toml  build.rs
src/mxc_diagnostic_console/src/: etw.rs  main.rs
src/mxc_pty/: Cargo.toml
src/mxc_pty/src/: lib.rs
src/mxc_telemetry/: Cargo.toml  build.rs  provider_codegen.rs
src/mxc_telemetry/src/: lib.rs
src/mxc_winres/: Cargo.toml
src/mxc_winres/src/: lib.rs
src/nanvix_binaries/: Cargo.toml  build.rs  checksums.json  versions.json
src/nanvix_binaries/src/: lib.rs
src/nanvix_common/: Cargo.toml
src/nanvix_common/src/: lib.rs
src/seatbelt_common/: Cargo.toml
src/seatbelt_common/src/: lib.rs  profile_builder.rs  seatbelt_runner.rs
src/testing/fuzz/: Cargo.toml  README.md
src/testing/linux_test_proxy/: Cargo.toml
src/testing/plm_tester/: Cargo.toml  README.md
src/testing/unix_test_proxy/: Cargo.toml
src/testing/wxc_e2e_tests/: Cargo.toml
src/testing/wxc_test_driver/: Cargo.toml
src/testing/wxc_test_proxy/: Cargo.toml  build.rs
src/testing/wxc_ui_probe/: Cargo.toml
src/tools/denial_capture_test/: Cargo.toml
src/tools/mxc_diagnostic_console/: Cargo.toml
src/tools/mxc_schema_gen/: Cargo.toml
src/tools/shim_security_test/: Cargo.toml
src/tools/wxc_projfs_probe/: Cargo.toml
src/tools/wxc_projfs_probe_child/: Cargo.toml
src/wslc_common/: Cargo.toml  build.rs
src/wslc_common/src/: lib.rs  policy_mapping.rs  wsl_container_runner.rs  wslc_bindings.rs
src/wxc/: Cargo.toml  build.rs
src/wxc/src/: learning_mode.rs  main.rs
src/wxc_common/: Cargo.toml
src/wxc_common/src/: agent_session_runner.rs  appcontainer.rs  appcontainer_runner.rs  base_container_runner.rs  cmdline.rs  config_parser.rs  diagnostic.rs  dispatcher.rs  error.rs  fallback_detector.rs  filesystem_bfs.rs  filesystem_dacl.rs  hyperlight_runner.rs  id.rs  isolation_session_runner.rs  job_object.rs  launch_diagnostics.rs  lib.rs  linux_proxy_coordinator.rs  lithium_runner.rs  log_symbols.rs  logger.rs  microvm_staging.rs  models.rs  mxc_error.rs  nanvix_runner.rs  network_firewall.rs  network_manager.rs  network_proxy.rs  probe.rs  process_util.rs  proxy_coordinator.rs  registry_config.rs  sandbox_protocol.rs  sandbox_runner.rs  sandbox_spec_generated.rs  sandbox_tracking.rs  script_runner.rs  state_aware_backend.rs  state_aware_dispatch.rs  (+9 more)
src/wxc_e2e_tests/: Cargo.toml
src/wxc_e2e_tests/src/: lib.rs
src/wxc_e2e_tests/tests/: e2e_cli.rs  e2e_linux_microvm.rs  e2e_sdk.rs  e2e_state_aware.rs  e2e_windows.rs
src/wxc_host_prep/: Cargo.toml
src/wxc_host_prep/src/: cli.rs  elevation_check.rs
src/wxc_sandbox_agent/: Cargo.toml
src/wxc_sandbox_agent/src/: executor.rs  firewall.rs  listener.rs  main.rs
src/wxc_sandbox_daemon/: Cargo.toml
src/wxc_sandbox_daemon/src/: main.rs  pipe_server.rs  rendezvous.rs  sandbox_vm.rs  tcp_bridge.rs
src/wxc_sandbox_guest/: Cargo.toml
src/wxc_sandbox_guest/src/: listener.rs
src/wxc_test_driver/: Cargo.toml  build.rs
src/wxc_test_driver/src/: main.rs
src/wxc_test_proxy/: Cargo.toml  README.md  build.rs
src/wxc_ui_probe/: Cargo.toml
src/wxc_windows_sandbox_daemon/: Cargo.toml  build.rs
src/wxc_windows_sandbox_guest/: Cargo.toml  build.rs
src/wxc_winhttp_proxy_shim/: Cargo.toml  README.md  build.rs
(+1494 files in other folders)
