[workspace]
members = ["wxc", "wxc_common", "wxc_test_driver", "wxc_test_proxy", "wxc_windows_sandbox_guest", "wxc_windows_sandbox_daemon", "wxc_winhttp_proxy_shim", "lxc", "lxc_common", "generated/base_container_specification"]
resolver = "3"

[workspace.package]
edition = "2021"

[workspace.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Networking_WinSock",
    "Win32_Security_Credentials",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security_Isolation",
    "Win32_System_Variant",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_System_Registry",
] }
windows-core = "0.62"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
wxc_common = { path = "wxc_common" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
nix = { version = "0.29", features = ["mount", "sched", "signal", "net", "process", "user"] }
lxc_common = { path = "lxc_common" }
flatbuffers = "25"
sandbox_spec = { path = "generated/base_container_specification" }