[package]
name = "isolation_session_bindings"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
windows-core = { workspace = true }
windows-collections = "0.3"
windows-future = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[build-dependencies]
semver = "1"
