[package]
name = "lxc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lxc-exec"
path = "src/main.rs"

[features]
hyperlight = ["wxc_common/hyperlight"]

[dependencies]
wxc_common = { workspace = true }
lxc_common = { workspace = true }
bwrap_common = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[build-dependencies]
mxc_winres = { workspace = true }
