[package]
name = "lxc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lxc-exec"
path = "src/main.rs"

[features]
hyperlight = ["wxc_common/hyperlight"]

[build-dependencies]
mxc_build_common.workspace = true

[dependencies]
wxc_common = { workspace = true }
lxc_common = { workspace = true }
bwrap_common = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
