[package]
name = "seatbelt_common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Provides CodexRequest, ContainerPolicy, SeatbeltConfig, Logger, and
# the ScriptRunner trait that seatbelt_runner implements. Same dep that
# lxc_common uses.
wxc_common = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
