[package]
name = "seatbelt_common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Provides CodexRequest, ContainerPolicy, SeatbeltConfig, Logger, and
# the ScriptRunner trait that seatbelt_runner implements. Same dep that
# lxc_common uses.
wxc_common = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
# Pty bridge is shared with the LXC backend via mxc_pty; that crate owns
# the openpty + pre_exec (setsid + TIOCSCTTY) plumbing and the libc/nix
# deps that go with it.
mxc_pty = { workspace = true }
