[package]
name = "wxc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wxc-exec"
path = "src/main.rs"

[dependencies]
wxc_common.workspace = true
anyhow.workspace = true
clap.workspace = true
windows.workspace = true

[target.'cfg(windows)'.dependencies]
nanvix_binaries = { path = "../nanvix_binaries", optional = true }
wslc_common = { workspace = true, optional = true }
isolation_session_bindings = { workspace = true, optional = true }

[target.'cfg(windows)'.build-dependencies]
nanvix_common = { path = "../nanvix_common" }

[features]
default = []
microvm = ["nanvix_binaries"]
wslc = ["dep:wslc_common", "wslc_common/link-wslcsdk"]
isolation_session = ["dep:isolation_session_bindings", "wxc_common/isolation_session"]
