[package]
name = "wxc_common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracelogging = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
semver = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
windows-core = { workspace = true }
flatbuffers = { workspace = true }
sandbox_spec = { workspace = true }
widestring = { workspace = true }

[dev-dependencies]
tempfile = "3"
