[package]
name = "wxc_common"
version = "0.1.0"
edition = "2021"

[features]
hyperlight = ["dep:hyperlight-unikraft-host"]
isolation_session = [
    "dep:isolation_session_bindings",
    "dep:windows-future",
    "dep:windows-collections",
]
microvm = ["dep:nanvix_common"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
getrandom = { workspace = true }
semver = "1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
hyperlight-unikraft-host = { git = "https://github.com/hyperlight-dev/hyperlight-unikraft", tag = "v0.6.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
nanvix_common = { path = "../nanvix_common", optional = true }
windows = { workspace = true }
windows-core = { workspace = true }
flatbuffers = { workspace = true }
sandbox_spec = { workspace = true }
widestring = { workspace = true }
winreg = { workspace = true }
isolation_session_bindings = { workspace = true, optional = true }
windows-future = { version = "0.3", optional = true }
uuid = { workspace = true }
windows-collections = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
