[package]
name = "wxc_test_driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wxc-test-driver"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

