[package]
name = "wxc_windows_sandbox_daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wxc-windows-sandbox-daemon"
path = "src/main.rs"

[dependencies]
wxc_common = { path = "../wxc_common" }
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
mxc_build_common.workspace = true
