[package]
name = "learning_mode_macos"
version.workspace = true
edition.workspace = true

# macOS stub for the learning-mode feature. Implements the
# `LearningModeBackend` trait with `Err(NotSupported)` so the
# orchestrator can dispatch by `cfg(target_os = "macos")` without
# losing type-safety. The real macOS implementation (likely
# EndpointSecurity framework) is tracked as future work.

[dependencies]
learning_mode_core = { workspace = true }
