[package]
name = "denial_capture"
version.workspace = true
edition.workspace = true

# Cross-platform crate: the public types compile everywhere so the SDK and
# integration tests can build on Linux/macOS too. Windows-only code (the
# actual ETW session, path canonicalization that calls QueryDosDeviceW, etc.)
# is gated by `#[cfg(target_os = "windows")]`.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
