[package]
name = "lxc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lxc-exec"
path = "src/main.rs"

[features]
hyperlight = ["wxc_common/hyperlight"]
microvm = ["wxc_common/microvm", "dep:nanvix_binaries"]

[build-dependencies]
mxc_build_common.workspace = true
nanvix_common = { path = "../../backends/nanvix/common" }

[dependencies]
wxc_common = { workspace = true }
lxc_common = { workspace = true }
bwrap_common = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
nanvix_binaries = { path = "../../backends/nanvix/binaries", optional = true }
