[package]
name = "mxc-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Importable library for starting MXC sandboxes in-process (no pty, streaming stdio)."

[lib]
name = "mxc_sdk"
path = "src/lib.rs"

[dependencies]
wxc_common.workspace = true
mxc_engine = { workspace = true }

[target.'cfg(target_os = "macos")'.dev-dependencies]
libc = { workspace = true }
